--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -2,7 +2,13 @@
 $color-text: #8C7C64;
 $color-background: #F7F4E6;
 $color-green: #89C68A;
-$color-green-25: #DBE9D0;
+$color-green-light: #f3f9f3;
+$color-blue: #8B9DF3;
+$color-blue-light: #f6f7fe;
+$color-pink: #FCA4B1;
+$color-pink-light: #fff0f2;
+$color-orange: #E49366;
+$color-orange-light: #fefdfc;
 
 // OPACITY
 $opacity-low: 25%;
