--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -12,3 +12,6 @@ $color-orange-light: #fefdfc;
 
 // OPACITY
 $opacity-low: 25%;
+
+// EASING
+$easing-easeOutBack: cubic-bezier(0.34, 1.56, 0.64, 1);
